--- a/package.json
+++ b/package.json
@@ -30,12 +30,7 @@
     "react-dom": "^16.5.1",
     "react-feather": "^1.1.4",
     "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.13",
-    "styled-components": "^4.1.2",
-    "typeface-merriweather": "0.0.43",
-    "typeface-montserrat": "0.0.43",
-    "typography": "^0.16.17",
-    "typography-theme-wordpress-2016": "^0.15.10"
+    "styled-components": "^4.1.2"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
