--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "url": "https://github.com/sunnysingh/web/issues"
   },
   "dependencies": {
+    "@mdx-js/mdx": "0.15.x",
+    "@mdx-js/tag": "0.15.x",
     "babel-plugin-styled-components": "^1.9.2",
+    "date-fns": "^1.30.1",
+    "disqus-react": "^1.0.5",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.23",
+    "gatsby-mdx": "^0.2.0",
     "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-manifest": "^2.0.5",
@@ -21,17 +26,17 @@
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.4",
     "gatsby-remark-prismjs": "^3.0.0",
-    "gatsby-remark-reading-time": "^1.0.1",
-    "gatsby-remark-responsive-iframe": "^2.0.5",
     "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-source-filesystem": "^2.0.2",
     "gatsby-transformer-remark": "^2.1.6",
     "gatsby-transformer-sharp": "^2.1.3",
+    "lodash": "^4.17.11",
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-feather": "^1.1.4",
     "react-helmet": "^5.2.0",
+    "reading-time": "^1.1.3",
     "styled-components": "^4.1.2"
   },
   "devDependencies": {
