--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sunnysingh.io",
-  "description": "Personal site of Sunny Singh.",
+  "description": "Projects, podcasts, and articles by Sunny Singh.",
   "version": "1.0.0",
   "author": "Sunny Singh <me@sunnysingh.io>",
   "bugs": {
