--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "clean": "rm -rf .cache & rm -rf public",
     "develop": "gatsby develop",
     "start": "npm run develop",
-    "build": "gatsby build",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "build": "gatsby build"
   },
   "dependencies": {
     "@mdx-js/mdx": "0.15.x",
@@ -57,7 +56,6 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.11.1",
-    "gh-pages": "^1.2.0",
     "prettier": "^1.14.2"
   },
   "homepage": "https://sunnysingh.io/",
