--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write 'src/**/*.js' 'src/**/*.md'",
-    "clean": "rm -rf .cache & rm -rf public",
+    "clean": "gatsby clean",
     "develop": "gatsby develop",
     "start": "npm run develop",
     "build": "gatsby build",
+    "serve": "gatsby serve",
     "snyk-protect": "snyk protect",
     "prepublish": "npm run snyk-protect"
   },
@@ -54,7 +55,7 @@
     "react-load-script": "^0.0.6",
     "snyk": "^1.192.3",
     "socialshares": "^2.0.5",
-    "styled-components": "^4.1.2"
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
