--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "develop": "gatsby develop",
     "start": "npm run develop",
     "build": "gatsby build",
-    "serve": "gatsby serve",
-    "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect"
+    "serve": "gatsby serve"
   },
   "dependencies": {
     "@mdx-js/mdx": "0.15.x",
@@ -53,7 +51,6 @@
     "react-helmet": "^6.0.0",
     "react-kawaii": "^0.16.0",
     "react-load-script": "^0.0.6",
-    "snyk": "^1.192.3",
     "socialshares": "^2.0.5",
     "styled-components": "^5.1.0"
   },
@@ -71,6 +68,5 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sunnysingh/web.git"
-  },
-  "snyk": true
+  }
 }
