--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.4",
+    "@mdx-js/react": "^1.6.4",
     "babel-plugin-styled-components": "^1.9.2",
     "date-fns": "^2.12.0",
     "gatsby": "^2.0.19",
@@ -29,6 +31,7 @@
     "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-mdx": "^1.2.12",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-root-import": "^2.0.4",
