Fix styles and shortcodes

--- a/package.json
+++ b/package.json
@@ -40,13 +40,12 @@
     "gatsby-plugin-typography": "^2.2.0",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^3.2.2",
-    "gatsby-remark-prismjs": "^3.0.0",
     "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-source-filesystem": "^2.0.22",
     "gatsby-transformer-remark": "^2.1.6",
     "gatsby-transformer-sharp": "^2.1.3",
     "lodash": "^4.17.11",
-    "prismjs": "^1.15.0",
+    "prism-react-renderer": "^1.1.1",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-feather": "^2.0.4",
