--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "date-fns": "^2.12.0",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.23",
-    "gatsby-plugin-google-analytics": "^2.0.5",
+    "gatsby-plugin-fathom": "^1.3.0",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-mdx": "^1.2.12",
     "gatsby-plugin-react-helmet": "^3.0.0",
