--- a/package.json
+++ b/package.json
@@ -23,40 +23,41 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "babel-plugin-styled-components": "^1.13.2",
-    "date-fns": "^2.25.0",
-    "gatsby": "^3.14.3",
+    "@mdx-js/mdx": "^2.1.3",
+    "@mdx-js/react": "^2.1.3",
+    "babel-plugin-styled-components": "^2.0.7",
+    "date-fns": "^2.29.2",
+    "gatsby": "^4.21.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-fathom": "^2.1.1",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-manifest": "^4.21.0",
+    "gatsby-plugin-mdx": "^4.0.0",
+    "gatsby-plugin-react-helmet": "^5.21.0",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-sharp": "^3.14.1",
-    "gatsby-plugin-styled-components": "^4.14.0",
-    "gatsby-plugin-twitter": "^3.14.0",
-    "gatsby-remark-copy-linked-files": "^4.11.0",
-    "gatsby-remark-images": "^5.11.0",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-plugin-sharp": "^4.21.0",
+    "gatsby-plugin-styled-components": "^5.21.0",
+    "gatsby-plugin-twitter": "^4.21.0",
+    "gatsby-remark-copy-linked-files": "^5.21.0",
+    "gatsby-remark-images": "^6.21.0",
+    "gatsby-source-filesystem": "^4.21.1",
+    "gatsby-transformer-sharp": "^4.21.0",
     "lodash": "^4.17.21",
-    "prism-react-renderer": "^1.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-feather": "^2.0.9",
+    "prism-react-renderer": "^1.3.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-helmet": "^6.1.0",
     "react-kawaii": "^0.17.0",
     "react-load-script": "^0.0.6",
+    "reading-time": "^1.5.0",
     "socialshares": "^2.0.5",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "eslint": "^8.0.1",
-    "eslint-plugin-react": "^7.26.1",
-    "hygen": "^6.1.0",
-    "prettier": "^2.4.1"
+    "eslint": "^8.23.0",
+    "eslint-plugin-react": "^7.31.1",
+    "hygen": "^6.2.8",
+    "prettier": "^2.7.1"
   },
   "homepage": "https://sunnysingh.io/",
   "keywords": [
