Replace Biome with Prettier and ESLint

--- a/package.json
+++ b/package.json
@@ -1,35 +1,44 @@
 {
-	"name": "sunnysingh.io",
-	"type": "module",
-	"description": "Personal Website of Sunny Singh",
-	"author": "Sunny Singh <me@sunnysingh.io>",
-	"version": "1.0.0",
-	"engines": {
-		"node": ">=24",
-		"npm": ">=11"
-	},
-	"scripts": {
-		"dev": "greenwood develop",
-		"build": "greenwood build",
-		"serve": "greenwood serve",
-		"checks": "npm run typecheck && npm run biomecheck",
-		"typecheck": "tsc",
-		"biomecheck": "biome check --write",
-		"lint": "biome lint --write",
-		"format": "biome format --write"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "2.3.10",
-		"@greenwood/cli": "0.33.3",
-		"typescript": "5.9.3"
-	},
-	"homepage": "https://sunnysingh.io/",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/sunnysingh/sunnysingh.io.git"
-	},
-	"bugs": {
-		"url": "https://github.com/sunnysingh/sunnysingh.io/issues"
-	}
+  "name": "sunnysingh.io",
+  "type": "module",
+  "description": "Personal Website of Sunny Singh",
+  "author": "Sunny Singh <me@sunnysingh.io>",
+  "version": "1.0.0",
+  "engines": {
+    "node": ">=24",
+    "npm": ">=11"
+  },
+  "scripts": {
+    "dev": "greenwood develop",
+    "build": "greenwood build",
+    "serve": "greenwood serve",
+    "checks": "npm run typecheck && npm run lint:check && npm run format:check",
+    "typecheck": "tsc",
+    "lint": "eslint . --fix",
+    "lint:check": "eslint .",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check"
+  },
+  "devDependencies": {
+    "@eslint/css": "0.14.1",
+    "@eslint/js": "9.39.2",
+    "@eslint/json": "0.14.0",
+    "@eslint/markdown": "7.5.1",
+    "@greenwood/cli": "0.33.3",
+    "eslint": "9.39.2",
+    "globals": "16.5.0",
+    "jiti": "2.6.1",
+    "prettier": "3.7.4",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.51.0"
+  },
+  "homepage": "https://sunnysingh.io/",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sunnysingh/sunnysingh.io.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sunnysingh/sunnysingh.io/issues"
+  }
 }
