--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://www.schemastore.org/tsconfig",
+  "exclude": [".greenwood", "public", "node_modules"],
   "compilerOptions": {
     "target": "es2020",
     "module": "preserve",
@@ -21,6 +22,5 @@
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true
-  },
-  "exclude": ["./public/", "./greenwood/", "node_modules"]
+  }
 }
