Revert "Remove last Lit remnant"
This reverts commit b6c75fcae4bda2bda21fea2a47a06ab120bcdbc8.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,6 @@
   "recommendations": [
     "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
-    "Tobermory.es6-string-html"
+    "runem.lit-plugin"
   ]
 }
